fixed scrollbar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -103,35 +103,21 @@ header h1 {
   top: 0 !important;
 }
 
-/* .codeBlockLines_node_modules-\@docusaurus-theme-classic-lib-next-theme-CodeBlock- {
-  border-radius: var(--ifm-global-radius);
-} */
-::-webkit-scrollbar {
+.prism-code::-webkit-scrollbar {
   width: 0px !important;
+  height: 0px !important;
+  display: none !important;
 }
 .prism-code::-webkit-scrollbar-track {
   width: 0px !important;
   height: 0px !important;
 }
-::-webkit-scrollbar-thumb {
-  display: none !important;
-  height: 0 !important;
-  width: 0 !important;
-  /* background-color: red !important;
-  border: 4px solid transparent !important;
-  border-radius: 8px !important;
-  background-clip: padding-box !important; */
-}
-.codeBlock_node_modules-\@docusaurus-theme-classic-lib-next-theme-CodeBlock-
-  ::-webkit-scrollbar {
+.prism-code::-webkit-scrollbar-thumb {
   display: none !important;
   height: 0 !important;
   width: 0 !important;
 }
-.codeBlock_node_modules-\@docusaurus-theme-classic-lib-next-theme-CodeBlock- {
-  -ms-overflow-style: none !important;
-  scrollbar-width: none !important;
-}
+
 .markdown code {
   font-weight: 700;
 }
